# ip2gid

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  ibarr.service.in  ibarr.spec  ip2gid.service  ip2gid.spec
buildlib/: config.h.in
debian/: changelog  control  copyright  rules  set_package_version
include/: msg_spec.h
src/: client.c  client.h  ib_resolve.h  ip2gid.h  ipr_client.c  ipr_client.h  ipr_server.c  ipr_server.h  log.c  log.h  main.c  msg_check.c  nl_rdma.c  nl_rdma.h  path_resolve.c  path_resolve.h  server.c  server.h
